[gd_scene load_steps=21 format=3 uid="uid://ctyh7wrwjjftr"]

[ext_resource type="PackedScene" uid="uid://bwykeoajgh1fe" path="res://Enemies/enemy_base.tscn" id="1_jl4wd"]
[ext_resource type="Texture2D" uid="uid://bocvecnre5nkx" path="res://Enemies/Capture.PNG" id="2_3opao"]
[ext_resource type="Script" path="res://Enemies/jragon.gd" id="2_vr8sf"]
[ext_resource type="PackedScene" uid="uid://jl48e5efjgfq" path="res://Components/Hitbox.tscn" id="4_fytxv"]
[ext_resource type="PackedScene" uid="uid://cmhc00pii5bst" path="res://UI/bar.tscn" id="5_vp32u"]
[ext_resource type="AudioStream" uid="uid://b6p8tpt80r8ho" path="res://Audio/demonic-roar-40349.mp3" id="6_50ou4"]
[ext_resource type="AudioStream" uid="uid://btyx6oabxneko" path="res://Audio/fire-magic-6947.mp3" id="7_cuf0d"]
[ext_resource type="AudioStream" uid="uid://c0dflxuey4a4i" path="res://Audio/dark soul meme song.mp3" id="8_7bc3f"]
[ext_resource type="PackedScene" uid="uid://bnam8ot52n632" path="res://StateMachine/state_machine.tscn" id="9_2pdi2"]
[ext_resource type="PackedScene" uid="uid://dd6c35vbcg0mn" path="res://StateMachine/state.tscn" id="10_gf4x0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_84jy8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fkql1"]
albedo_texture = ExtResource("2_3opao")

[sub_resource type="PlaneMesh" id="PlaneMesh_pmrgi"]
size = Vector2(5, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_q4vhg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_h31v3"]

[sub_resource type="Animation" id="Animation_bp5wl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyBase/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5708, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jhosq"]
resource_name = "charge"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyBase/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1.5708, 0, 0), Vector3(1.309, 1.5708, 1.5708), Vector3(1.35727, -1.5708, -1.5708), Vector3(1.5708, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_elfsf"]
_data = {
"RESET": SubResource("Animation_bp5wl"),
"charge": SubResource("Animation_jhosq")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_eignx"]
size = Vector3(5.19335, 5.10023, 1.86619)

[sub_resource type="ViewportTexture" id="ViewportTexture_h5u0s"]
viewport_path = NodePath("UIBase/SubViewport")

[node name="Jragon" instance=ExtResource("1_jl4wd")]
script = ExtResource("2_vr8sf")

[node name="EnemyCollision" parent="." index="0"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("BoxShape3D_84jy8")

[node name="MeshInstance3D" parent="EnemyBase" index="0"]
transform = Transform3D(1, 0, 0, 0, -3.61999e-06, -1, 0, 1, -3.61999e-06, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_fkql1")
mesh = SubResource("PlaneMesh_pmrgi")

[node name="VelocityComponent" parent="." index="2" node_paths=PackedStringArray("character")]
character = NodePath("..")
default_speed = 0.7
knockback_resistance = 999.0

[node name="Hurtbox" parent="." index="3" node_paths=PackedStringArray("health_component", "hitstun_component", "velocity_component", "hurtbox_owner")]
health_component = NodePath("../HealthComponent")
hitstun_component = NodePath("../HitstunComponent")
velocity_component = NodePath("../VelocityComponent")
hurtbox_owner = NodePath("..")

[node name="CollisionShape3D" parent="Hurtbox" index="0"]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_q4vhg")

[node name="HealthComponent" parent="." index="4" node_paths=PackedStringArray("healthOwner", "health_bar")]
healthOwner = NodePath("..")
health_bar = NodePath("../UIBase/SubViewport/Bar")

[node name="CollisionShape3D" parent="AttackRangeComponent" index="0"]
transform = Transform3D(50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0)
shape = SubResource("SphereShape3D_h31v3")

[node name="DamageStats" parent="." index="7"]
damage = 6.0
knockback = 5.0
hitstun = 1.0

[node name="ProjectileSpawnerComponent" parent="." index="8" node_paths=PackedStringArray("p_spawner_owner")]
p_spawner_owner = NodePath("..")

[node name="ChangeTimer" type="Timer" parent="." index="9"]
one_shot = true
autostart = true

[node name="DelayTimer" type="Timer" parent="." index="10"]
wait_time = 0.1
one_shot = true

[node name="FireballTimer" type="Timer" parent="." index="11"]
one_shot = true

[node name="AnimationPlayer" parent="." index="12"]
libraries = {
"": SubResource("AnimationLibrary_elfsf")
}

[node name="Hitbox" parent="." index="13" node_paths=PackedStringArray("hitbox_owner", "damage") instance=ExtResource("4_fytxv")]
hitbox_owner = NodePath("..")
damage = NodePath("../DamageStats")

[node name="CollisionShape3D" parent="Hitbox" index="0"]
shape = SubResource("BoxShape3D_eignx")

[node name="SubViewport" type="SubViewport" parent="UIBase" index="0"]
transparent_bg = true
size = Vector2i(10000, 1000)

[node name="Bar" parent="UIBase/SubViewport" index="0" instance=ExtResource("5_vp32u")]
value = 100.0
tint_progress = Color(0.462745, 0, 0, 1)

[node name="Sprite3D" type="Sprite3D" parent="UIBase" index="1"]
transform = Transform3D(0.04, 0, 0, 0, 0.04, 0, 0, 0, 0.04, 0, 2.84189, 0)
texture = SubResource("ViewportTexture_h5u0s")

[node name="Name" type="Label3D" parent="UIBase" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.25944, 0)
text = "Legendary Jragon"
font_size = 42

[node name="Roar" type="AudioStreamPlayer" parent="." index="15"]
stream = ExtResource("6_50ou4")
volume_db = -33.738

[node name="fireball_audio" type="AudioStreamPlayer" parent="." index="16"]
stream = ExtResource("7_cuf0d")

[node name="BossTheme" type="AudioStreamPlayer" parent="." index="17"]
stream = ExtResource("8_7bc3f")
volume_db = -9.369

[node name="StateMachine" parent="." index="18" instance=ExtResource("9_2pdi2")]

[node name="State" parent="StateMachine" index="0" instance=ExtResource("10_gf4x0")]

[connection signal="timeout" from="ChangeTimer" to="." method="_on_change_timer_timeout"]

[editable path="Hurtbox"]
[editable path="AttackRangeComponent"]
[editable path="Hitbox"]
